--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py26, py27, py32, py33, py34, rhel6
 
 [testenv]
 commands =
-    nosetests mixbox
+    nosetests
     # sphinx-build -b doctest docs docs/_build/doctest
     # sphinx-build -b html docs docs/_build/html
 deps = -rrequirements.txt
@@ -11,7 +11,7 @@ deps = -rrequirements.txt
 [testenv:rhel6]
 basepython=python2.6
 commands =
-    nosetests mixbox
+    nosetests
 deps =
     lxml==2.2.3
     python-dateutil==1.4.1
