Update setup.cfg with more conditional dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,5 +13,7 @@
 requires-dist =
     lxml
     python-dateutil
-    weakrefset; python_version == "2.6"
     ordered-set
+    weakrefset; python_version < "2.7"
+    weakrefmethod>=1.0.3; python_version < "3.4"
+    importlib; python_version < "2.7"
