Create universal wheels.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[bdist_wheel]
+universal=1
+
 # This is necessary because older versions of setuptools don't support
 # environment markers in setup.py, so we have to use conditional imports there.
 # Universal wheels, however, do not execute setup.py, so newer versions of pip
@@ -8,7 +11,6 @@
 # won't work.
 #
 # https://www.python.org/dev/peps/pep-0345/#environment-markers
-
 [metadata]
 requires-dist =
     lxml
