--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,5 @@ branches:
 
 notifications:
   email:
-    - cybox-commits-list@lists.mitre.org
+    - gback@mitre.org
+    - stix-commits-list@lists.mitre.org
