--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-  - "3.3"
   - "3.4"
   - "3.5"
   - "3.6"
+matrix:
+  include:
+    # https://blog.travis-ci.com/2019-04-15-xenial-default-build-environment
+    # https://travis-ci.community/t/issue-with-python-2-6-on-linux/3861/2
+    - python: 2.6
+      dist: trusty
 install:
   - pip install tox-travis
 script:
