--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: python
+os: linux
+dist: xenial
 python:
   - "2.7"
   - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
-matrix:
+jobs:
   include:
     # https://blog.travis-ci.com/2019-04-15-xenial-default-build-environment
     # https://travis-ci.community/t/issue-with-python-2-6-on-linux/3861/2
