move bumpversion config into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,12 @@
+[bumpversion]
+current_version = 1.0.3
+tag = True
+commit = True
+
+[bumpversion:file:mixbox/version.py]
+
 [bdist_wheel]
-universal=1
+universal = 1
 
 # This is necessary because older versions of setuptools don't support
 # environment markers in setup.py, so we have to use conditional imports there.
@@ -12,6 +19,7 @@ universal=1
 #
 # https://www.python.org/dev/peps/pep-0345/#environment-markers
 [metadata]
+license_file = LICENSE.txt
 requires-dist =
     lxml
     python-dateutil
